--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
       <div class="leader-img">
         <img src="images/ceo (1).jpeg" alt="CEO Name" />
       </div>
-      <h3>CEO Name</h3>
-      <span>Chief Executive Officer</span>
+      <h3>NOURDIN MOHAMED</h3>
+      <span>CEO</span>
     </div>
 
     <div class="leader-card">
       <div class="leader-img">
         <img src="images/manager.jpeg" alt="Manager Name" />
       </div>
-      <h3>Manager Name</h3>
-      <span>Project Manager</span>
+      <h3>ASADULLAHI KHAN</h3>
+      <span>manager</span>
     </div>
   </div>
 </section>
