--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HUDI SOFT | Professional Management Systems</title>
+  <link rel="website icon" type="png"
+  href="images/image (2).png">
   <link rel="stylesheet" href="HUDI.css"/>
 </head>
 <body>
