--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HUDI SOFT | Professional Management Systems</title>
   <link rel="website icon" type="png"
-  href="image (1).png">
+  href="images/image (1).png">
   <link rel="stylesheet" href="HUDI.css"/>
 </head>
 <body>
