--- a/index.html
+++ b/index.html
@@ -1,139 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HUDI SOFT | Professional Management Systems</title>
-  <link rel="website icon" type="png"
-  href="images/image (1).png">
-  <link rel="stylesheet" href="HUDI.css"/>
+  <link rel="website icon" type="png" href="images/image (1).png">
+  <link rel="stylesheet" href="HUDI.css" />
 </head>
+
 <body>
 
-<header class="header">
-  <div class="logo">HUDI <span>SOFT</span></div>
-  <nav class="nav">
-    <a href="#home" data-key="navHome">Home</a>
-    <a href="#about" data-key="navAbout">About</a>
-    <a href="#projects" data-key="navProjects">Projects</a>
-    <a href="#contact" data-key="navContact">Contact</a>
-  </nav>
-  <button class="lang-btn" onclick="toggleLang()">SO / EN</button>
-</header>
+  <header class="header">
+    <div class="logo">HUDI <span>SOFT</span></div>
+    <nav class="nav">
+      <a href="#home" data-key="navHome">Home</a>
+      <a href="#about" data-key="navAbout">About</a>
+      <a href="#projects" data-key="navProjects">Projects</a>
+      <a href="#contact" data-key="navContact">Contact</a>
+    </nav>
+    <button class="lang-btn" onclick="toggleLang()">SO / EN</button>
+  </header>
 
-<!-- HERO -->
-<section id="home" class="hero">
-  <h1 data-key="heroTitle">
-    Professional <span>Management Systems</span>
-  </h1>
-  <p data-key="heroText">
-    HUDI SOFT develops enterprise software solutions for businesses, hospitals,
-    hotels, restaurants and organizations.
-  </p>
-</section>
-
-<!-- ABOUT + STATS -->
-<section id="about" class="about-with-stats">
-  <div class="about-left">
-    <h2 data-key="aboutTitle">About <span>Us</span></h2>
-
-    <p class="about-text" data-key="aboutText">
-      HUDI SOFT is a professional project management and software development
-      company dedicated to building smart, secure and scalable digital systems
-      for modern organizations. Founded with the vision of transforming how
-      businesses operate through technology, HUDI SOFT focuses on delivering
-      enterprise-level solutions that improve efficiency, transparency and
-      decision-making across multiple industries.
-
-      Our company specializes in the design and development of management systems
-      for hospitals, clinics, hotels, restaurants, schools, construction
-      companies, water supply organizations, real estate firms, garbage
-      management services and general business operations. We believe technology
-      should simplify work, not complicate it.
-
-      By combining modern technologies with strong project management practices,
-      HUDI SOFT empowers organizations to embrace digital transformation and
-      achieve sustainable growth.
+  <!-- HERO -->
+  <section id="home" class="hero">
+    <h1 data-key="heroTitle">
+      Professional <span>Management Systems</span>
+    </h1>
+    <p data-key="heroText">
+      HUDI SOFT develops enterprise software solutions for businesses, hospitals,
+      hotels, restaurants and organizations.
     </p>
-  </div>
+  </section>
 
-  <!-- RIGHT SIDE STATS -->
-  <div class="stats-right">
-    <div class="stat-box">
-      <h3 class="counter" data-target="1000">0</h3>
-      <p data-key="users">Users</p>
+  <!-- ABOUT + STATS -->
+  <section id="about" class="about-with-stats">
+    <div class="about-left">
+      <h2 data-key="aboutTitle">About <span>Us</span></h2>
+
+      <p class="about-text" data-key="aboutText">
+        HUDI SOFT is a professional project management and software development
+        company dedicated to building smart, secure and scalable digital systems
+        for modern organizations. Founded with the vision of transforming how
+        businesses operate through technology, HUDI SOFT focuses on delivering
+        enterprise-level solutions that improve efficiency, transparency and
+        decision-making across multiple industries.
+
+        Our company specializes in the design and development of management systems
+        for hospitals, clinics, hotels, restaurants, schools, construction
+        companies, water supply organizations, real estate firms, garbage
+        management services and general business operations. We believe technology
+        should simplify work, not complicate it.
+
+        By combining modern technologies with strong project management practices,
+        HUDI SOFT empowers organizations to embrace digital transformation and
+        achieve sustainable growth.
+      </p>
     </div>
 
-    <div class="stat-box">
-      <h3 class="counter" data-target="100">0</h3>
-      <p data-key="workers">Workers</p>
-    </div>
-  </div>
-</section>
-
-<!-- LEADERSHIP (CEO & MANAGER) -->
-<section class="section">
-  <div class="section-title">
-    <h2>Leadership</h2>
-    <p>Company executive management</p>
-  </div>
-
-  <div class="leader-grid">
-    <div class="leader-card">
-      <div class="leader-img">
-        <img src="images/ceo (1).jpeg" alt="CEO Name" />
+    <!-- RIGHT SIDE STATS -->
+    <div class="stats-right">
+      <div class="stat-box">
+        <h3 class="counter" data-target="1000">0</h3>
+        <p data-key="users">Users</p>
       </div>
-      <h3>NOURDIN MOHAMED</h3>
-      <span>CEO</span>
-    </div>
 
-    <div class="leader-card">
-      <div class="leader-img">
-        <img src="images/manager.jpeg" alt="Manager Name" />
+      <div class="stat-box">
+        <h3 class="counter" data-target="100">0</h3>
+        <p data-key="workers">Workers</p>
       </div>
-      <h3>ASADULLAHI KHAN</h3>
-      <span>manager</span>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- PROJECTS -->
-<section id="projects" class="section">
-  <div class="section-title">
-    <h2 data-key="projectsTitle">Our <span>Projects</span></h2>
-  </div>
+  <!-- LEADERSHIP (CEO & MANAGER) -->
+  <section class="section">
+    <div class="section-title">
+      <h2>Leadership</h2>
+      <p>Company executive management</p>
+    </div>
 
-  <div class="grid">
-    <div class="card">Restaurant Management</div>
-    <div class="card">Hotel Management</div>
-    <div class="card">Hospital Management</div>
-    <div class="card">Clinic System</div>
-    <div class="card">School System</div>
-    <div class="card">Apps Development</div>
-    <div class="card">Construction</div>
-    <div class="card">Water Supply</div>
-    <div class="card">Real Estate</div>
-    <div class="card">Business System</div>
-    <div class="card">Garbage Management</div>
-  </div>
-</section>
+    <div class="leader-grid">
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/ceo (1).jpeg" alt="CEO Name" />
+        </div>
+        <h3>NOURDIN MOHAMED</h3>
+        <span>CEO</span>
+      </div>
 
-<!-- CONTACT -->
-<section id="contact" class="section contact">
-  <div class="section-title">
-    <h2 data-key="contactTitle">Contact <span>Us</span></h2>
-  </div>
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/manager.jpeg" alt="Manager Name" />
+        </div>
+        <h3>ASADULLAHI KHAN</h3>
+        <span>manager</span>
+      </div>
+    </div>
 
-  <form>
-    <input type="text" placeholder="Your Name"/>
-    <input type="email" placeholder="Your Email"/>
-    <textarea placeholder="Your Message"></textarea>
-    <button class="btn" type="submit">Send</button>
-  </form>
-</section>
+    <!-- TOGGLE BUTTON -->
+    <div style="text-align: center; margin-top: 40px;">
+      <button id="workers-btn" class="btn" onclick="toggleWorkers()">Hide Workers</button>
+    </div>
 
-<footer>© 2025 HUDI SOFT</footer>
+    <!-- HIDDEN WORKERS SECTION -->
+    <div id="workers-section" class="leader-grid" style="display: grid; margin-top: 40px;">
+      <!-- New Worker 1 -->
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/amarican guy.jpg" alt="Worker Name" />
+        </div>
+        <h3>ALEX</h3>
+        <span>DEVELOPER</span>
+      </div>
 
-<script src="HUDI.js"></script>
+      <!-- New Worker 2 -->
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/pakistan guy.jpg" alt="Worker Name" />
+        </div>
+        <h3>ZAIN</h3>
+        <span>DEVELOPER</span>
+      </div>
+
+      <!-- New Worker 3 -->
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/kenya guy.jpg" alt="Worker Name" />
+        </div>
+        <h3>KEVIN</h3>
+        <span>DEVELOPER</span>
+      </div>
+
+      <!-- New Worker 4 -->
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/xaafad.jpg" alt="Worker Name" />
+        </div>
+        <h3>IMRAN</h3>
+        <span>DEVELOPER</span>
+      </div>
+      <!-- Worker 3 -->
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/muuse.jpg" alt="Worker Name" />
+        </div>
+        <h3>MUUSE</h3>
+        <span>Marketer</span>
+      </div>
+
+      <!-- Worker 4 -->
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/maxamuud.jpg" alt="Worker Name" />
+        </div>
+        <h3>MAXAMUUD</h3>
+        <span>Marketer</span>
+      </div>
+
+      <!-- Worker 5 -->
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/jamac.jpg" alt="Worker Name" />
+        </div>
+        <h3>JAMAC</h3>
+        <span>Marketer</span>
+      </div>
+
+      <!-- Worker 6 -->
+      <div class="leader-card">
+        <div class="leader-img">
+          <img src="images/one one.jpg" alt="Worker Name" />
+        </div>
+        <h3>abdi</h3>
+        <span>Marketer</span>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- PROJECTS -->
+  <section id="projects" class="section">
+    <div class="section-title">
+      <h2 data-key="projectsTitle">Our <span>Projects</span></h2>
+    </div>
+
+    <div class="grid">
+      <div class="card">Restaurant Management</div>
+      <div class="card">Hotel Management</div>
+      <div class="card">Hospital Management</div>
+      <div class="card">Clinic System</div>
+      <div class="card">School System</div>
+      <div class="card">Apps Development</div>
+      <div class="card">Construction</div>
+      <div class="card">Water Supply</div>
+      <div class="card">Real Estate</div>
+      <div class="card">Business System</div>
+      <div class="card">Garbage Management</div>
+      <div class="card">websites And portifolios</div>
+      <div class="card">Ecommerce System</div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="section contact">
+    <div class="section-title">
+      <h2 data-key="contactTitle">Contact <span>Us</span></h2>
+    </div>
+
+    <form>
+      <input type="text" placeholder="Your Name" />
+      <input type="email" placeholder="Your Email" />
+      <textarea placeholder="Your Message"></textarea>
+      <button class="btn" type="submit">Send</button>
+    </form>
+  </section>
+
+  <footer>© 2025 HUDI SOFT</footer>
+
+  <script src="HUDI.js"></script>
 </body>
+
 </html>
